--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,8 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # End of https://www.gitignore.io/api/java,gradle
+
+.idea
+gradle
+gradlew
+gradlew.bat
