remove references to images and add DB.java

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,7 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # End of https://www.gitignore.io/api/java,gradle
+
+.idea
+gradlew
+gradlew.bat
