--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,5 @@ dependencies {
   compile 'org.slf4j:slf4j-simple:1.7.21'
   compile 'org.sql2o:sql2o:1.5.4'
     compile 'com.google.code.gson:gson:2.8.2'
+  compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
 }
