--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,9 @@ repositories {
 }
 
 dependencies {
-  testCompile group: 'junit', name: 'junit', version: '4.12'
-  compile "com.sparkjava:spark-core:2.6.0"
-  compile 'org.slf4j:slf4j-simple:1.7.21'
-  compile 'org.sql2o:sql2o:1.5.4'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile "com.sparkjava:spark-core:2.6.0"
+    compile 'org.slf4j:slf4j-simple:1.7.21'
+    compile 'org.sql2o:sql2o:1.5.4'
+    compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
 }
