--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,6 @@ dependencies {
   testCompile group: 'junit', name: 'junit', version: '4.12'
   compile "com.sparkjava:spark-core:2.6.0"
   compile 'org.slf4j:slf4j-simple:1.7.21'
-  compile group: 'org.sql2o', name: 'sql2o', version: '1.6.0-RC3'
-  compile 'com.google.code.gson:gson:2.8.2'
-  compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
+  compile group: 'org.sql2o', name: 'sql2o', version: '1.5.4'
   compile group: 'com.h2database', name: 'h2', version: '1.4.191'
 }
