--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,6 @@ dependencies {
   compile 'org.sql2o:sql2o:1.5.4'
   compile 'com.google.code.gson:gson:2.8.2'
   compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
+  compile group: 'com.h2database', name: 'h2', version: '1.4.191'
+
 }
