--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,5 @@ dependencies {
     compile "com.sparkjava:spark-core:2.6.0"
     compile 'org.slf4j:slf4j-simple:1.7.21'
     compile 'org.sql2o:sql2o:1.5.4'
-    compile group: 'com.h2database', name: 'h2', version: '1.4.191'
+    compile 'com.google.code.gson:gson:2.5'  // to be explained shortly
 }
